samples/_failures_safe/1761634323_829192_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f44b1e7a.c: In function ‘main’:
./samples/SAFE/__tmp_f44b1e7a.c:161:12: error: missing terminating " character
  161 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_f44b1e7a.c:161:5: error: expected expression at end of input
  161 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_f44b1e7a.c:161:5: error: expected declaration or statement at end of input
